Bug 75015 - FILEOPEN: Vertically Aligned Chart Title displayed backwards
Summary: FILEOPEN: Vertically Aligned Chart Title displayed backwards
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:5.0.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2014-02-15 10:27 UTC by Luke
Modified: 2015-04-25 00:21 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Show the issue with vertical titles in Charts (10.65 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2014-02-15 10:27 UTC, Luke
Details
PDF export using Excel 2010 (166.19 KB, application/pdf)
2014-10-08 05:39 UTC, Buovjaga
Details
PDF export using 4.3.2.2 (16.14 KB, application/pdf)
2014-10-08 05:41 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2014-02-15 10:27:48 UTC
Created attachment 94115 [details]
Show the issue with vertical titles in Charts

This bug was found in a LO 4.3 running in windows 7. LibreOffice reverses up the text orientation when importing MS Office Open XML .docx and .xlsx files with vertical allign. I have attached an example.

Steps to reproduce the bug:
1. Open attached VerticalChartTitle.xlsx document in Calc
2. Open attached VerticalChartTitle.xlsx document in Excel2007/2010/365
3. Compare the documents.

Note that MSO displays the title top-down, while Calc displays it bottom-up.

Here are the results of other title alignments that I tested and the associated MS Office Open XML:

Vertical (top-down) Rot - LO FAIL
<a:bodyPr vert="eaVert" rot="0"/>

90 Rot (top-down)- LO PASS 
<a:bodyPr vert="horz" rot="5400000"/>

270 Rot (bottom-up) - LO PASS
<a:bodyPr vert="horz" rot="-5400000"/>

Can anyone tell from the OXML spec if <a:bodyPr vert="horz" rot="5400000"/> is equivalent to <a:bodyPr vert="eaVert" rot="0"/> ?
Comment 1 Jorendc 2014-02-17 09:34:47 UTC
I can confirm this behavior, tested using Mac OSX 10.9 with LibreOffice Version: 4.2.1.1 Build ID: d7dbbd7842e6a58b0f521599204e827654e1fb8b

(In reply to comment #0)
> Can anyone tell from the OXML spec if <a:bodyPr vert="horz" rot="5400000"/>
> is equivalent to <a:bodyPr vert="eaVert" rot="0"/> ?

Not sure about that. This is the only information I found on the internet: http://officeopenxml.com/drwSp-text-bodyPr-columns.php
Probably there is more information in the specifications.

Kind regards,
Joren
Comment 2 Buovjaga 2014-10-08 05:39:47 UTC
Created attachment 107534 [details]
PDF export using Excel 2010
Comment 3 Buovjaga 2014-10-08 05:41:45 UTC
Created attachment 107535 [details]
PDF export using 4.3.2.2

The vertical title and the border around the chart are invisible in 4.3.2.2 Win 7 64-bit. Same result with 4.4.0.0.alpha0+ dev build from Oct 06.
Comment 4 Markus Mohrhard 2015-04-23 03:44:11 UTC
So the import proble around the chart title seems to be fixed in master.

I'm hijacking this bug report however for the export issue with the same document.
Comment 5 Commit Notification 2015-04-25 00:19:23 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bee3934bb68f38e89bb33f75f405099ca08d59a9

first part for axis title manual position export, tdf#75015

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-04-25 00:19:26 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d55cb0845a094601dcc0149e9a59e360021d231c

export title rotation, tdf#75015

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-04-25 00:19:29 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=af46ffafb73ff305e53be8768033d69ca9e6e5e1

add test for tdf#75015

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-04-25 00:19:33 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e9fbe1f7cd28de2a9da8089d89e903406165eb56

also add a test case for title rotation, tdf#75015

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Markus Mohrhard 2015-04-25 00:21:49 UTC
There are a few more layout problems around that file: manual layouting of plot area, ... but I will use different bug reports to track them.

The title layout issue has been mostly fixed. There are minor positioning differences that I need to revisit in the future. For now it looks quite good.