first part for axis title manual position export, tdf#75015

Change-Id: Ib49ea2e76805e68ff71a52d9308258969454aaca